<resources>
    <string name="app_name">stsoloFragmentPractice</string>
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_text">내용을 입력하세요</string>
    <string name="btnsend">ONE</string>
    <string name="btnsend2">Two</string>
    <string name="btnsend3">Three</string>
    <string name="input_data">내용이 생겨요</string>
    <string name="main_text">프레그먼트에서 받아오기</string>
</resources>
