<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.stsolofragmentpractice.FragmentOne">
    
    <EditText
        android:id="@+id/edttext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_text"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">
        
        <Button
            android:id="@+id/btnsend1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnsend"/>
        
        <Button
            android:id="@+id/btnsend2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnsend2"/>
        
        <Button
            android:id="@+id/btnsend3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnsend3"/>
    
    </LinearLayout>
    
    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:hint="@string/input_data"/>

</LinearLayout>
